feat: expose registry statistics
